--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,7 @@ goodpath= ./data/good
 highqpath= ./data/highq
 highq5wpath= ./data/highq_5w
 modelpath= ./data/model
+datacluster = ./data/cluster
 
 [mysql]
 host = 192.168.106.100
@@ -20,6 +21,8 @@ user = root
 passwd = bigdata
 
 [dict]
+# 优质杂志名
+goodjournal = ./source/qikan_fenzi.txt
 # 近义词扩展词林的存放路径
 dict_path = ./source/hit_wordsnet.txt
 otherdict_folder = ./source/other_jiebadicts
